deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snowglobe
  namespace: snowglobe
  labels:
    app: snowglobe
spec:
  type: ClusterIP
  selector:
    app: snowglobe
  ports:
    - name: ws
      port: 80
      targetPort: ws
